--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <title>untitled</title>
     <meta name="viewport" content="user-scalable=no,initial-scale = 1.0,maximum-scale = 1.0">
-    <link rel="stylesheet" href="topcoat-mobile-dark.min.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="hamburger-basement.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/topcoat-mobile-dark.min.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/hamburger-basement.css" type="text/css" media="screen">
     <style type="text/css" media="screen">
     .hamburger-basement-main {
         background-color: #4b4d4e;
