Fix css on demo page

--- a/test.html
+++ b/test.html
@@ -11,6 +11,9 @@
         background-color: #4b4d4e;
         box-shadow: 0 0 5px black;
     }
+    #main {
+        overflow: hidden;
+    }
     </style>
 </head>
 <body>
